fix location center on mobile devices

--- a/plugins/Skua/resources/journey-page.css
+++ b/plugins/Skua/resources/journey-page.css
@@ -236,7 +236,7 @@ skua-map-scroller .resize-handle dna-icon {
 @media (width < 768px) {
     skua-map-scroller {
         --steps-max-width: 100vw;
-        --map-scroller-steps-height: 75vh;
+        --map-scroller-steps-height: 75dvh;
         --steps-resized-height: var(--map-scroller-steps-height);
     }
 
@@ -248,6 +248,8 @@ skua-map-scroller .resize-handle dna-icon {
         padding-left: 0;
         direction: ltr;
         box-shadow: 0 16px 16px 0 var(--shadow-color);
+
+        scroll-padding-top: 76px; /* header height */
     }
 
     skua-map-scroller dna-story-scroller::-webkit-scrollbar {
@@ -293,6 +295,13 @@ skua-map-scroller .resize-handle dna-icon {
 @media (width >= 768px) and (width < 1024px) {
     dna-map-scroller-step .item-content {
         --padding-left: calc(var(--padding) * 4);
+    }
+}
+
+/* only for tablet devices */
+@media (width >= 768px) and (width <= 1024px) and (hover: none) {
+    skua-map-scroller .map-controls-container {
+        display: none;
     }
 }
 
